--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "@dotmh/ts-hello",
-  "private": true,
+  "name": "ts-base",
   "version": "1.0.0",
-  "description": "An Example Module in the Dotmh TS template",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "test": "tsx --test ./tests/*.test.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "18.15.0",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.2"
+  }
 }
