feat: add engines to package.json

--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "husky": "^9.0.11",
     "tsx": "^4.7.1",
     "typescript": "^5.4.2"
+  },
+  "engines": {
+    "node": "^18.15.0",
+    "pnpm": "^8.15.4"
   }
 }
