--- a/libs/hello/package.json
+++ b/libs/hello/package.json
@@ -2,7 +2,7 @@
   "name": "@dotmh/ts-hello",
   "private": true,
   "version": "1.0.0",
-  "description": "An Example Module in the Dotmh TS template",
+  "description": "An Example Module in the DotMH TS template",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
