--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ts-base",
+  "name": "@dotmh/ts-base",
   "version": "1.0.0",
-  "description": "",
+  "description": "The basic typescript project setup for DotMH",
   "main": "index.js",
   "type": "module",
   "scripts": {
