--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint . --fix --ext .ts",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint:check": "eslint . --ext .ts --fix-dry-run"
+    "lint:check": "eslint . --ext .ts --fix-dry-run",
+    "lint:secrets": "secretlint \"**/*\"",
+    "precommit": "pnpm run lint:secrets && pnpm run lint:check && pnpm run format:check && pnpm run test"
   },
   "keywords": [],
   "author": "",
@@ -21,10 +23,12 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@dotmh/eslint-config-ts": "^1.0.0",
     "@dotmh/prettier-config": "^1.0.0",
+    "@secretlint/secretlint-rule-preset-recommend": "^8.1.2",
     "@types/node": "18.15.0",
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
+    "secretlint": "^8.1.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.2"
   },
