--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,5 +3,18 @@
   "build": {
     "dockerfile": "Dockerfile",
     "args": {"VARIANT": "18"}
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "streetsidesoftware.code-spell-checker",
+        "esbenp.prettier-vscode",
+        "dbaeumer.vscode-eslint",
+        "ms-vscode.vscode-typescript-tslint-plugin",
+        "github.vscode-github-actions",
+        "github.copilot",
+        "github.copilot-chat"
+      ]
+    }
   }
 }
