--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,4 +6,4 @@ updates:
       interval: 'weekly'
     ignore:
       - dependency-name: '@types/node'
-        versions: ['19.x', '20.x', '21.x']
+        versions: ['21.x']
