--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@dotmh/eslint-config-ts": "^1.0.0",
     "@dotmh/prettier-config": "^1.0.0",
+    "@dotmh/tsconfig": "^2.1.0",
     "@secretlint/secretlint-rule-preset-recommend": "^8.2.4",
     "@types/node": "20.14.9",
     "eslint": "^8.57.0",
