--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "prettier": "@dotmh/prettier-config",
   "scripts": {
     "test": "pnpm run -r test",
+    "test:watch": "vitest",
     "prepare": "husky",
     "build": "smart-builder",
     "build:dry-run": "SKIP_BUILD=yes smart-builder",
@@ -35,7 +36,8 @@
     "prettier": "^3.3.3",
     "secretlint": "^8.2.4",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vitest": "^2.1.3"
   },
   "engines": {
     "node": "^20.14.0",
