--- a/libs/template/package.json
+++ b/libs/template/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsc",
     "test": "vitest --run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest --coverage --run"
   },
   "keywords": [],
   "author": "",
