--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "test": "pnpm run -r test",
     "test:watch": "vitest",
+    "test:coverage": "pnpm run -r test:coverage",
     "prepare": "husky",
     "build": "smart-builder",
     "build:dry-run": "SKIP_BUILD=yes smart-builder",
@@ -31,13 +32,14 @@
     "@dotmh/tsconfig": "^2.1.0",
     "@secretlint/secretlint-rule-preset-recommend": "^9.0.0",
     "@types/node": "20.16.10",
+    "@vitest/coverage-istanbul": "^2.1.4",
     "eslint": "^8.57.1",
     "husky": "^9.1.6",
     "prettier": "^3.3.3",
     "secretlint": "^9.0.0",
-    "tsx": "^4.19.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.3"
+    "vitest": "^2.1.4"
   },
   "engines": {
     "node": "^20.14.0",
