fix(vitest): each module now extends the base config

--- a/libs/template/package.json
+++ b/libs/template/package.json
@@ -5,6 +5,8 @@
   "description": "An Example Module in the DotMH TS template",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
+  "module": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "vitest --run",
