fix(eslint): ignore built js files

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "prepare": "husky",
     "build": "smart-builder",
     "build:dry-run": "SKIP_BUILD=yes smart-builder",
-    "lint": "eslint . --fix --ext .ts",
+    "lint": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint:check": "eslint . --ext .ts --fix-dry-run",
+    "lint:check": "eslint . --fix-dry-run",
     "lint:secrets": "secretlint \"**/*\"",
     "githook:prepush": "pnpm run lint:secrets && pnpm run lint:check && pnpm run format:check && pnpm run test",
     "githook:precommit": "pnpm run lint:secrets"
@@ -26,14 +26,17 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@dotmh/eslint-config-ts": "^2.0.0",
+    "@dotmh/eslint-config-ts": "^3.0.1",
     "@dotmh/prettier-config": "^2.0.0",
     "@dotmh/smart-builder": "^1.2.3",
     "@dotmh/tsconfig": "^2.1.0",
     "@secretlint/secretlint-rule-preset-recommend": "^9.0.0",
     "@types/node": "20.17.10",
     "@vitest/coverage-istanbul": "^2.1.8",
-    "eslint": "^8.57.1",
+    "eslint": "^9.16.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
     "husky": "^9.1.7",
     "prettier": "^3.4.2",
     "secretlint": "^9.0.0",
