--- a/package.json
+++ b/package.json
@@ -24,28 +24,29 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@dotmh/eslint-config-ts": "^3.0.1",
     "@dotmh/prettier-config": "^2.0.0",
     "@dotmh/smart-builder": "^1.2.3",
     "@dotmh/tsconfig": "^2.1.0",
-    "@secretlint/secretlint-rule-preset-recommend": "^9.0.0",
+    "@secretlint/secretlint-rule-preset-recommend": "^9.3.1",
     "@types/node": "20.17.16",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
-    "@vitest/coverage-istanbul": "^3.0.4",
-    "eslint": "^9.19.0",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
+    "@vitest/coverage-istanbul": "^3.1.2",
+    "eslint": "^9.25.0",
     "eslint-plugin-promise": "^7.2.1",
     "husky": "^9.1.7",
-    "prettier": "^3.4.2",
-    "secretlint": "^9.0.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "vitest": "^3.0.4"
+    "prettier": "^3.5.3",
+    "secretlint": "^9.3.1",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.2",
+    "yaml": "^2.7.1"
   },
   "engines": {
-    "node": "^20.17.0",
-    "pnpm": "^9.4.0"
+    "node": ">=20.17.0",
+    "pnpm": ">=9.4.0"
   }
 }
