feat: remove smart builder

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test:watch": "vitest",
     "test:coverage": "vitest --coverage --run",
     "prepare": "husky",
-    "build": "smart-builder",
-    "build:dry-run": "SKIP_BUILD=yes smart-builder",
+    "build": "pnpm -wr run build",
     "lint": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -28,7 +27,6 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@dotmh/eslint-config-ts": "^3.0.1",
     "@dotmh/prettier-config": "^2.0.0",
-    "@dotmh/smart-builder": "^1.2.3",
     "@dotmh/tsconfig": "^2.1.0",
     "@secretlint/secretlint-rule-preset-recommend": "^11.2.5",
     "@types/node": "22.13.14",
